# alpbook

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: doxygen.yml
benchmarks/: CMakeLists.txt
benchmarks/latency/: CMakeLists.txt
benchmarks/latency/src/: main.cpp  sink.cppm  strategy.cppm
benchmarks/micro/: CMakeLists.txt
benchmarks/micro/src/book/: nasdaq.cpp
benchmarks/src/book/: nasdaq.cpp
docs/: building.md
src/: alpbook.cppm
src/alpbook/: book.cppm  common.cppm  dispatch.cppm  internal.cppm  itch.cppm  strategy.cppm
src/alpbook/book/: core.cppm  nasdaq-state.cppm  nasdaq.cppm
src/alpbook/internal/: backoff.cppm  hints.hpp  pin.cppm  pool.cppm
src/alpbook/itch/: dispatch.cppm  parsing-listener.cppm  parsing.cppm  reader.cppm
src/alpbook/sink/: nasdaq.cppm
tests/: CMakeLists.txt
tests/src/: alpbook_test.cpp  dispatch.cpp
tests/src/book/: nasdaq.cpp
tests/src/internal/: pool.cpp
tests/src/sink/: nasdaq.cpp
